syntax = "proto3";

// Web exposes a backend server over gRPC.
package web;

option go_package = "web";

// Backend defines the interface exposed by the backend.
service Backend {
    rpc GetUser(GetUserRequest) returns (User) {}
    rpc GetUsers(GetUsersRequest) returns (stream User) {}
}

message GetUserRequest {
    string user_id = 1;
}

message User {
    string id = 1;
}

message GetUsersRequest {
    int64 num_users = 1;
}
